--- a/ExViewer/Views/PopularPage.xaml
+++ b/ExViewer/Views/PopularPage.xaml
@@ -1,73 +1,75 @@
-﻿<controls:MyPage x:Class="ExViewer.Views.PopularPage"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:controls="using:ExViewer.Controls"
-                 xmlns:local="using:ExViewer.Views"
-                 NavigationCacheMode="Enabled"
-                 xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 mc:Ignorable="d">
-    <controls:MyPage.Transitions>
-        <TransitionCollection>
-            <NavigationThemeTransition>
-                <DrillInNavigationTransitionInfo />
-            </NavigationThemeTransition>
-        </TransitionCollection>
-    </controls:MyPage.Transitions>
+﻿<views:MvvmPage x:Class="ExViewer.Views.PopularPage"
+                xmlns:views="using:Opportunity.MvvmUniverse.Views"
+                xmlns:xb="using:Opportunity.Converters.XBind"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:controls="using:ExViewer.Controls"
+                xmlns:local="using:ExViewer.Views"
+                NavigationCacheMode="Enabled"
+                xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                mc:Ignorable="d">
+  <Page.Transitions>
+    <TransitionCollection>
+      <NavigationThemeTransition>
+        <DrillInNavigationTransitionInfo />
+      </NavigationThemeTransition>
+    </TransitionCollection>
+  </Page.Transitions>
 
-    <RelativePanel>
-        <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
-                Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,48,x1,x0'}"
+  <RelativePanel>
+    <tk:PullToRefreshListView x:Name="lv"
+                              Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x0'), Mode=OneWay}"
+                              Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
+                              RefreshCommand="{x:Bind ViewModel.Refresh}"
+                              RelativePanel.AlignLeftWithPanel="True"
+                              RelativePanel.AlignRightWithPanel="True"
+                              RelativePanel.AlignBottomWithPanel="True"
+                              RelativePanel.Below="cb_top"
+                              ItemsSource="{x:Bind ViewModel.Galleries, Mode=OneWay}"
+                              Style="{StaticResource GalleryListViewStyle}"
+                              ItemClick="lv_ItemClick">
+      <tk:PullToRefreshListView.RefreshIndicatorContent>
+        <tk:PullToRefreshIndicator />
+      </tk:PullToRefreshListView.RefreshIndicatorContent>
+      <tk:PullToRefreshListView.ItemTemplate>
+        <DataTemplate xmlns:c="using:ExClient.Galleries"
+                      xmlns:controls="using:ExViewer.Controls"
+                      x:DataType="c:Gallery">
+          <controls:GalleryViewer x:Name="gv_Gallery"
+                                  Gallery="{x:Bind}" />
+        </DataTemplate>
+      </tk:PullToRefreshListView.ItemTemplate>
+      <tk:PullToRefreshListView.Footer>
+        <TextBlock x:Uid="Views/PopularPage/LoadingMoreTextBlock"
+                   HorizontalAlignment="Center"
+                   Margin="12"
+                   Style="{StaticResource BaseTextBlockStyle}"
+                   Visibility="{x:Bind xb:Visibility.OfBoolean(ViewModel.Galleries.HasMoreItems), FallbackValue=Visible, Mode=OneWay}"
+                   Text="Loading popular galleries..." />
+      </tk:PullToRefreshListView.Footer>
+    </tk:PullToRefreshListView>
+    <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
+            Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,48,x1,x0'), Mode=OneWay}"
+            RelativePanel.AlignLeftWithPanel="True"
+            RelativePanel.AlignRightWithPanel="True"
+            RelativePanel.AlignTopWithPanel="True" />
+    <CommandBar x:Name="cb_top"
+                Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x1,x1,x0'), Mode=OneWay}"
+                HorizontalContentAlignment="Stretch"
                 RelativePanel.AlignLeftWithPanel="True"
                 RelativePanel.AlignRightWithPanel="True"
-                RelativePanel.AlignTopWithPanel="True" />
-        <CommandBar x:Name="cb_top"
-                    Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
-                    HorizontalContentAlignment="Stretch"
-                    RelativePanel.AlignLeftWithPanel="True"
-                    RelativePanel.AlignRightWithPanel="True"
-                    RelativePanel.AlignTopWithPanel="True"
-                    DefaultLabelPosition="Right"
-                    OverflowButtonVisibility="Auto">
-            <CommandBar.PrimaryCommands>
-                <AppBarButton x:Uid="Views/PopularPage/RefreshAppBarButton"
-                              x:Name="abb_Refresh"
-                              Command="{x:Bind VM.Refresh}"
-                              Icon="Refresh"
-                              Label="Refresh" />
-            </CommandBar.PrimaryCommands>
-        </CommandBar>
-        <tk:PullToRefreshListView x:Name="lv"
-                                  Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
-                                  Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
-                                  RefreshCommand="{x:Bind VM.Refresh}"
-                                  RelativePanel.AlignLeftWithPanel="True"
-                                  RelativePanel.AlignRightWithPanel="True"
-                                  RelativePanel.AlignBottomWithPanel="True"
-                                  RelativePanel.Below="cb_top"
-                                  ItemsSource="{x:Bind VM.Galleries, Mode=OneWay}"
-                                  Style="{StaticResource GalleryListViewStyle}"
-                                  ItemClick="lv_ItemClick">
-            <tk:PullToRefreshListView.RefreshIndicatorContent>
-                <tk:PullToRefreshIndicator />
-            </tk:PullToRefreshListView.RefreshIndicatorContent>
-            <tk:PullToRefreshListView.ItemTemplate>
-                <DataTemplate xmlns:c="using:ExClient.Galleries"
-                              xmlns:controls="using:ExViewer.Controls"
-                              x:DataType="c:Gallery">
-                    <controls:GalleryViewer x:Name="gv_Gallery"
-                                            Gallery="{x:Bind}" />
-                </DataTemplate>
-            </tk:PullToRefreshListView.ItemTemplate>
-            <tk:PullToRefreshListView.Header>
-                <TextBlock x:Uid="Views/PopularPage/LoadingMoreTextBlock"
-                           HorizontalAlignment="Center"
-                           Margin="12"
-                           Style="{StaticResource BaseTextBlockStyle}"
-                           Visibility="{x:Bind VM.Galleries.HasMoreItems, FallbackValue=Visible, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
-                           Text="Loading popular galleries..." />
-            </tk:PullToRefreshListView.Header>
-        </tk:PullToRefreshListView>
-    </RelativePanel>
-</controls:MyPage>
+                RelativePanel.AlignTopWithPanel="True"
+                DefaultLabelPosition="Right"
+                OverflowButtonVisibility="Auto">
+      <CommandBar.PrimaryCommands>
+        <AppBarButton x:Uid="Views/PopularPage/RefreshAppBarButton"
+                      x:Name="abb_Refresh"
+                      Command="{x:Bind ViewModel.Refresh}"
+                      Icon="Refresh"
+                      Label="Refresh" />
+      </CommandBar.PrimaryCommands>
+    </CommandBar>
+  </RelativePanel>
+</views:MvvmPage>
