--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -1,16 +1,18 @@
-﻿<controls:MyPage x:Class="ExViewer.Views.SearchPage"
-                 x:Name="root"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
-                 xmlns:client="using:ExClient"
-                 mc:Ignorable="d"
-                 Loading="root_Loading"
-                 Unloaded="root_Unloaded"
-                 xmlns:controls="using:ExViewer.Controls"
-                 NavigationCacheMode="Enabled">
+﻿<views:MvvmPage x:Class="ExViewer.Views.SearchPage"
+                xmlns:views="using:Opportunity.MvvmUniverse.Views"
+                xmlns:xb="using:Opportunity.Converters.XBind"
+                x:Name="root"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
+                xmlns:client="using:ExClient"
+                mc:Ignorable="d"
+                Loading="root_Loading"
+                Unloaded="root_Unloaded"
+                xmlns:controls="using:ExViewer.Controls"
+                NavigationCacheMode="Enabled">
   <Page.Transitions>
     <TransitionCollection>
       <NavigationThemeTransition>
@@ -18,7 +20,7 @@
       </NavigationThemeTransition>
     </TransitionCollection>
   </Page.Transitions>
-  <controls:MyPage.Resources>
+  <Page.Resources>
     <Style x:Name="AdvancedSearchOptionStyle"
            TargetType="CheckBox">
       <Setter Property="Margin"
@@ -31,7 +33,7 @@
       <Setter Property="Margin"
               Value="12,2,24,2" />
     </Style>
-  </controls:MyPage.Resources>
+  </Page.Resources>
   <RelativePanel>
     <tk:PullToRefreshListView x:Name="lv"
                               RelativePanel.Below="ab"
@@ -40,9 +42,9 @@
                               RelativePanel.AlignRightWithPanel="True"
                               SelectionMode="None"
                               RefreshRequested="lv_RefreshRequested"
-                              Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
-                              Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
-                              ItemsSource="{x:Bind VM.SearchResult, Mode=OneWay}"
+                              Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x0'), Mode=OneWay}"
+                              Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x0,x0,x0,x1'), Mode=OneWay}"
+                              ItemsSource="{x:Bind ViewModel.SearchResult, Mode=OneWay}"
                               ContinuumNavigationTransitionInfo.ExitElementContainer="True"
                               Style="{StaticResource GalleryListViewStyle}"
                               ItemClick="lv_ItemClick">
@@ -62,7 +64,7 @@
                    HorizontalAlignment="Center"
                    Margin="12"
                    Style="{StaticResource BaseTextBlockStyle}"
-                   Visibility="{x:Bind client:SearchResultExtension.IsEmptyVisible(VM.SearchResult.Count, VM.SearchResult.HasMoreItems), FallbackValue=Collapsed, Mode=OneWay}"
+                   Visibility="{x:Bind client:SearchResultExtension.IsEmptyVisible(ViewModel.SearchResult.Count, ViewModel.SearchResult.HasMoreItems), FallbackValue=Collapsed, Mode=OneWay}"
                    Text="No hits found" />
       </ListView.Header>
       <ListView.Footer>
@@ -70,16 +72,16 @@
                    HorizontalAlignment="Center"
                    Margin="12"
                    Style="{StaticResource BaseTextBlockStyle}"
-                   Visibility="{x:Bind VM.SearchResult.HasMoreItems, FallbackValue=Visible, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
+                   Visibility="{x:Bind xb:Visibility.OfBoolean(ViewModel.SearchResult.HasMoreItems), FallbackValue=Visible, Mode=OneWay}"
                    Text="Loading more galleries..." />
       </ListView.Footer>
     </tk:PullToRefreshListView>
     <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
-            Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,48,x1,x0'}"
+            Padding="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,48,x1,x0'), Mode=OneWay}"
             RelativePanel.AlignLeftWithPanel="True"
             RelativePanel.AlignRightWithPanel="True" />
     <AppBar x:Name="ab"
-            Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
+            Margin="{x:Bind xb:Thickness.Convert(VisibleBounds, 'x1,x1,x1,x0'), Mode=OneWay}"
             ClosedDisplayMode="Compact"
             Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
             RelativePanel.AlignLeftWithPanel="True"
@@ -87,7 +89,7 @@
             Opening="ab_Opening"
             Closed="ab_Closed">
       <Grid x:Name="gdAb"
-            MaxHeight="{x:Bind caculateGdAbMaxHeight(VisibleBoundsThickness, root.ActualHeight), Mode=OneWay}">
+            MaxHeight="{x:Bind caculateGdAbMaxHeight(VisibleBounds, root.ActualHeight), Mode=OneWay}">
         <Grid.RowDefinitions>
           <RowDefinition Height="Auto" />
           <RowDefinition />
@@ -104,11 +106,11 @@
                         Grid.ColumnSpan="2"
                         QueryIcon="Find"
                         Margin="8"
-                        Text="{x:Bind VM.Keyword, Mode=TwoWay}"
+                        Text="{x:Bind ViewModel.Keyword, Mode=TwoWay}"
                         PlaceholderText="Search..."
                         controls:TagSuggestionService.IsEnabled="True"
                         controls:TagSuggestionService.InputScope="Search"
-                        controls:TagSuggestionService.SubmitCommand="{x:Bind VM.Search, Mode=OneWay}" />
+                        controls:TagSuggestionService.SubmitCommand="{x:Bind ViewModel.Search, Mode=OneWay}" />
         <ScrollViewer x:Name="sv_AdvancedSearch"
                       Margin="0,0,0,12"
                       Grid.Row="1"
@@ -119,7 +121,7 @@
             <controls:CategorySelector x:Name="cs_Category"
                                        MaxWidth="560"
                                        XYFocusDown="{x:Bind ts_Advanced}"
-                                       SelectedCategory="{x:Bind VM.Category, Mode=TwoWay}"
+                                       SelectedCategory="{x:Bind ViewModel.Category, Mode=TwoWay}"
                                        HorizontalAlignment="Center" />
             <ToggleSwitch x:Uid="Views/SearchPage/AdvancedToggleButton"
                           x:Name="ts_Advanced"
@@ -127,13 +129,13 @@
                           Style="{StaticResource TextBlockToggleSwitchStyle}"
                           OffContent="Show advanced options"
                           OnContent="Hide advanced options"
-                          HorizontalAlignment="Center" 
-                          MinWidth="0"/>
+                          HorizontalAlignment="Center"
+                          MinWidth="0" />
             <tk:WrapPanel x:Name="wp_AdvancedSearch"
                           TabFocusNavigation="Once"
                           Orientation="Horizontal"
                           XYFocusKeyboardNavigation="Enabled"
-                          Visibility="{x:Bind ts_Advanced.IsOn, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
+                          Visibility="{x:Bind ts_Advanced.IsOn, Mode=OneWay}"
                           Margin="20,0,-20,0"
                           MaxWidth="800"
                           HorizontalAlignment="Center">
@@ -141,46 +143,46 @@
                         XYFocusUp="{x:Bind ts_Advanced}"
                         Content="Search gallery name"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
-                        IsChecked="{x:Bind VM.AdvancedSearch.SearchName, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+                        IsChecked="{x:Bind ViewModel.AdvancedSearch.SearchName, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
               <CheckBox x:Uid="Views/SearchPage/TagsCheckBox"
                         Content="Search gallery tags"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
-                        IsChecked="{x:Bind VM.AdvancedSearch.SearchTags, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+                        IsChecked="{x:Bind ViewModel.AdvancedSearch.SearchTags, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
               <CheckBox x:Uid="Views/SearchPage/DescriptionCheckBox"
                         Content="Search gallery description"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
-                        IsChecked="{x:Bind VM.AdvancedSearch.SearchDescription, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+                        IsChecked="{x:Bind ViewModel.AdvancedSearch.SearchDescription, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
               <CheckBox x:Uid="Views/SearchPage/TorrentNamesCheckBox"
                         Content="Search torrent filenames"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
-                        IsChecked="{x:Bind VM.AdvancedSearch.SearchTorrentFilenames, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+                        IsChecked="{x:Bind ViewModel.AdvancedSearch.SearchTorrentFilenames, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
               <CheckBox x:Uid="Views/SearchPage/OnlyTorrentsCheckBox"
                         Content="Only show galleries with torrents"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
-                        IsChecked="{x:Bind VM.AdvancedSearch.GalleriesWithTorrentsOnly, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+                        IsChecked="{x:Bind ViewModel.AdvancedSearch.GalleriesWithTorrentsOnly, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
               <CheckBox x:Uid="Views/SearchPage/LowPowerTagsCheckBox"
                         Content="Search low-power tags"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
-                        IsChecked="{x:Bind VM.AdvancedSearch.SearchLowPowerTags, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+                        IsChecked="{x:Bind ViewModel.AdvancedSearch.SearchLowPowerTags, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
               <CheckBox x:Uid="Views/SearchPage/DownvotedTagsCheckBox"
                         Content="Search downvoted tags"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
-                        IsChecked="{x:Bind VM.AdvancedSearch.SearchDownvotedTags, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+                        IsChecked="{x:Bind ViewModel.AdvancedSearch.SearchDownvotedTags, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
               <CheckBox x:Uid="Views/SearchPage/SkipMasterTagsCheckBox"
                         Content="Skip master tags"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
-                        IsChecked="{x:Bind VM.AdvancedSearch.SkipMasterTags, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+                        IsChecked="{x:Bind ViewModel.AdvancedSearch.SkipMasterTags, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
               <CheckBox x:Uid="Views/SearchPage/ShowExpungedCheckBox"
                         Content="Show expunged galleries"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
-                        IsChecked="{x:Bind VM.AdvancedSearch.ShowExpungedGalleries, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+                        IsChecked="{x:Bind ViewModel.AdvancedSearch.ShowExpungedGalleries, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
               <StackPanel Orientation="Horizontal">
                 <CheckBox x:Uid="Views/SearchPage/MinRatingCheckBox"
                           MinWidth="0"
                           Content="Minimum rating: "
-                          IsChecked="{x:Bind VM.AdvancedSearch.SearchMinimumRating, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+                          IsChecked="{x:Bind ViewModel.AdvancedSearch.SearchMinimumRating, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
                 <ComboBox VerticalAlignment="Center"
-                          SelectedItem="{x:Bind VM.AdvancedSearch.MinimumRating, Mode=TwoWay, Converter={StaticResource EmptyConverter}}"
+                          SelectedItem="{x:Bind ViewModel.AdvancedSearch.MinimumRating, Mode=TwoWay, Converter={StaticResource EmptyConverter}}"
                           Margin="0,0,24,0"
                           MinWidth="0"
                           Width="60">
@@ -193,23 +195,23 @@
               <CheckBox x:Uid="Views/SearchPage/DisableDefaultLanguageFiltersCheckBox"
                         Content="Disable default language filters"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
-                        IsChecked="{x:Bind VM.AdvancedSearch.DisableDefaultLanguageFilters, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+                        IsChecked="{x:Bind ViewModel.AdvancedSearch.DisableDefaultLanguageFilters, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
               <CheckBox x:Uid="Views/SearchPage/DisableDefaultUploaderFiltersCheckBox"
                         Content="Disable default uploader filters"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
-                        IsChecked="{x:Bind VM.AdvancedSearch.DisableDefaultUploaderFilters, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+                        IsChecked="{x:Bind ViewModel.AdvancedSearch.DisableDefaultUploaderFilters, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
             </tk:WrapPanel>
             <StackPanel HorizontalAlignment="Stretch"
-                        Visibility="{x:Bind ts_Advanced.IsOn, Converter={StaticResource FalseToVisibleConverter}, Mode=OneWay}">
+                        Visibility="{x:Bind xb:Visibility.OfBooleanInv(ts_Advanced.IsOn), Mode=OneWay}">
               <Button x:Name="btnFileSearch"
                       x:Uid="Views/SearchPage/FileSearchButton"
                       Content="File search"
                       HorizontalAlignment="Center"
                       Click="btnFileSearch_Click"
                       Style="{StaticResource TextBlockButtonStyle}" />
-              <StackPanel Visibility="{x:Bind VM.FileSearch, Converter={StaticResource NullToCollapsedConverter}, Mode=OneWay}"
+              <StackPanel Visibility="{x:Bind ViewModel.FileSearch, Converter={StaticResource NullToCollapsedConverter}, Mode=OneWay, FallbackValue=Collapsed}"
                           HorizontalAlignment="Center">
-                <TextBlock Text="{x:Bind VM.FileSearch.FileName, Converter={StaticResource FormatConverter}, ConverterParameter='ms-resource:Views/SearchPage/FileSearchNameFormatString', Mode=OneWay}"
+                <TextBlock Text="{x:Bind ViewModel.FileSearch.FileName, Converter={StaticResource FormatConverter}, ConverterParameter='ms-resource:Views/SearchPage/FileSearchNameFormatString', Mode=OneWay}"
                            HorizontalAlignment="Stretch"
                            TextWrapping="WrapWholeWords"
                            Margin="8" />
@@ -218,19 +220,19 @@
                   <TextBlock x:Uid="Views/SearchPage/SearchSimilarTextBlock"
                              Text="• Similarity scan enabled"
                              Style="{StaticResource FileSearchOptionStyle}"
-                             Visibility="{x:Bind VM.FileSearch.SearchSimilar, Mode=OneWay}" />
+                             Visibility="{x:Bind ViewModel.FileSearch.SearchSimilar, Mode=OneWay, FallbackValue=Collapsed}" />
                   <TextBlock x:Uid="Views/SearchPage/SearchExactlyTextBlock"
                              Text="• Similarity scan disabled"
                              Style="{StaticResource FileSearchOptionStyle}"
-                             Visibility="{x:Bind VM.FileSearch.SearchSimilar, Converter={StaticResource FalseToVisibleConverter}, Mode=OneWay}" />
+                             Visibility="{x:Bind xb:Visibility.OfBooleanInv(ViewModel.FileSearch.SearchSimilar), Mode=OneWay, FallbackValue=Collapsed}" />
                   <TextBlock x:Uid="Views/SearchPage/OnlyCoversTextBlock"
                              Text="• Only searched covers"
                              Style="{StaticResource FileSearchOptionStyle}"
-                             Visibility="{x:Bind VM.FileSearch.OnlyCovers, Mode=OneWay}" />
+                             Visibility="{x:Bind ViewModel.FileSearch.OnlyCovers, Mode=OneWay, FallbackValue=Collapsed}" />
                   <TextBlock x:Uid="Views/SearchPage/SearchExpungedTextBlock"
                              Text="• Expunged shown"
                              Style="{StaticResource FileSearchOptionStyle}"
-                             Visibility="{x:Bind VM.FileSearch.SearchExpunged, Mode=OneWay}" />
+                             Visibility="{x:Bind ViewModel.FileSearch.SearchExpunged, Mode=OneWay, FallbackValue=Collapsed}" />
                 </tk:WrapPanel>
               </StackPanel>
             </StackPanel>
@@ -239,4 +241,4 @@
       </Grid>
     </AppBar>
   </RelativePanel>
-</controls:MyPage>
+</views:MvvmPage>
